--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@${{ github.sha }}
     - name: Setup php version ${{ matrix.php }}
+      uses: shivammathur/setup-php@v2
       with:
         php-version: ${{ matrix.php }}
         coverage: xdebug
