--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
       matrix:
         php: ['7.3', '7.4', '8.0']
     steps:
-    - uses: actions/checkout@${{ github.sha }}
+    - uses: actions/checkout@v2
     - name: Setup php version ${{ matrix.php }}
       uses: shivammathur/setup-php@v2
       with:
