--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
         }
     ],
     "require-dev": {
-        "phpunit/phpunit": "^9"
+        "phpunit/phpunit": "^9",
+        "phpunit/phpcov": "^8.2",
+        "php-coveralls/php-coveralls": "^2.4"
     }
 }
