--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,6 +9,7 @@ sonar.projectName=core
 sonar.sources=src
 
 sonar.tests=tests
+sonar.php.tests.reportPath=build/logs/execution.xml
 sonar.php.coverage.reportPaths=build/logs/clover.xml
 
 # Encoding of the source code. Default is default system encoding
