--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,11 @@
             "Fastwf\\Core\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Fastwf\\Tests\\": "tests/"
+        }
+    },
     "authors": [
         {
             "name": "David BELBEZE",
