--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -21,7 +21,7 @@ jobs:
         composer install
     - name: Run tests
       run: |
-        php vendor/bin/phpunit tests --coverage-clover build/logs/clover.xml --log-junit build/logs/execution.xml
+        php vendor/bin/phpunit tests --coverage-clover build/logs/clover.xml --log-junit build/logs/execution.xml --stderr
     - name: Upload coverage results to Coveralls
       env:
         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
