--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -28,6 +28,9 @@ jobs:
       run: |
         php vendor/bin/php-coveralls --coverage_clover=build/logs/clover.xml -v
       continue-on-error: true
+    - name: Fix code coverage paths for SonarCloud Scan
+      run: |
+        sed -i 's@'$GITHUB_WORKSPACE'@/github/workspace/@g' build/logs/clover.xml build/logs/execution.xml
     - name: SonarCloud Scan
       uses: SonarSource/sonarcloud-github-action@master
       env:
