--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -26,7 +26,7 @@ jobs:
       env:
         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
       run: |
-        php vendor/bin/php-coveralls --coverage_clover=build/logs/clover.xml -v
+        php vendor/bin/php-coveralls --coverage_clover=build/logs/clover.xml -vvv
       continue-on-error: true
     - name: Fix code coverage paths for SonarCloud Scan
       run: |
