--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,6 @@
         }
     ],
     "require-dev": {
-        "phpunit/phpunit": "^9",
-        "phpunit/phpcov": "^8.2",
-        "php-coveralls/php-coveralls": "^2.4"
+        "phpunit/phpunit": "^9"
     }
 }
